Add emoji to buttons

--- a/src/show.css
+++ b/src/show.css
@@ -90,6 +90,7 @@ button, a.button, input[type=submit] {
   width: 100%;
   margin: 20px 0 8px 0 !important;
   background: none;
+  border: none;
   border-radius: 8px;
   padding: 14px;
   font-weight: 500;
